gig purchase code refactor

--- a/Frontend/src/assets/styles/cmps/_PaymentDetails.scss
+++ b/Frontend/src/assets/styles/cmps/_PaymentDetails.scss
@@ -117,7 +117,7 @@
     border-block-start: 1px solid $clrSecondary2;
     border-block-end: 1px solid $clrSecondary2;
 
-    img {
+    i {
       margin: 0 16px;
     }
   }
