fix not sticky when small

--- a/Frontend/src/assets/styles/setup/_mq.scss
+++ b/Frontend/src/assets/styles/setup/_mq.scss
@@ -397,8 +397,9 @@
         }
     }
 
-    .gig-aside {
+    .gig-details-aside {
         @media (max-width: 900px) {
+            position: static;
             width: 100%;
         }
     }
