--- a/Frontend/src/assets/styles/cmps/_AboutSeller.scss
+++ b/Frontend/src/assets/styles/cmps/_AboutSeller.scss
@@ -12,6 +12,7 @@
     border-radius: 3px;
     margin-top: 0;
     line-height: 130%;
+    margin-block-end: 1em;
 
     .user-stats {
       display: grid;
