--- a/Frontend/src/assets/styles/views/_GigDetails.scss
+++ b/Frontend/src/assets/styles/views/_GigDetails.scss
@@ -22,8 +22,7 @@
       }
 
       .divider {
-        margin-inline-start: 5px;
-        margin-inline-end: 5px;
+        margin: 0 5px;
         color: $clrSecondary45;
       }
     }
