--- a/Frontend/src/assets/styles/cmps/_UserReviews.scss
+++ b/Frontend/src/assets/styles/cmps/_UserReviews.scss
@@ -3,23 +3,65 @@
     flex-direction: row;
     background-color: white;
     border-block-start: 1px solid $clrSecondary2;
-    padding: 20px;
-    // align-items: center;
+    padding: 40px 0;
 
-    img {
-        height: 48px;
-        width: 48px;
-        border-radius: 24px;
-        margin-inline-end: 16px;
+    .username {
+      font-weight: bold;
     }
 
-    .stars3 {
+    .pfp {
+      height: 48px;
+      width: 48px;
+      border-radius: 50%;
+      margin-inline-end: 16px;
+      object-fit: cover;
+      min-width: 48px;
+    }
+
+    .country {
+      display: flex;
+      align-items: center;
+      font-size: 14px;
+      color: $clrSecondary6;
+
+      img {
+        margin-inline-end: 0.5em;
+        height: 20px;
+        width: 20px;
+      }
+    }
+
+    .review-details {
+      display: flex;
+      align-items: center;
+      margin-block-start: 20px;
+
+      .stars {
         margin: 0;
 
-        img {
-            margin-inline-end: 4px;
-            height: 14px;
-            width: 14px;
+        .rating {
+          font-weight: 500;
         }
+
+        img {
+          margin-inline-end: 4px;
+          height: 14px;
+          width: 14px;
+        }
+      }
+
+      .divider {
+        margin: 0 8px;
+      }
+
+      .time-ago {
+        font-size: 14px;
+        line-height: 21px;
+        color: $clrSecondary6;
+      }
+    }
+
+    .comment {
+      line-height: 1.5em;
     }
 }
