--- a/Frontend/src/assets/styles/cmps/_UserMsg.scss
+++ b/Frontend/src/assets/styles/cmps/_UserMsg.scss
@@ -1,6 +1,6 @@
 @keyframes slideDown {
     from {
-        transform: translateY(-100%);
+        transform: translateY(100%);
     }
 
     to {
@@ -10,9 +10,9 @@
 
 .user-msg {
     position: fixed;
-    top: 0;
     right: 0;
     left: 0;
+    bottom: 1em;
     z-index: 999;
     width: 100%;
     animation: slideDown 0.5s forwards;
@@ -23,7 +23,7 @@
         max-width: 900px;
         margin: 0 auto;
         padding: 1em 2em;
-        border-radius: 0 0 10px 10px;
+        border-radius: 1em;
         border: 1px solid rgba(0, 0, 0, 0.1);
         border-top: none;
         box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
@@ -32,26 +32,6 @@
         align-items: center;
 
         transition: all 0.3s ease;
-
-        ::before,
-        ::after {
-            content: "";
-            position: absolute;
-            height: 12px;
-            width: 12px;
-            border-radius: 50%;
-            top: -6px;
-            z-index: -1;
-            transition: all 0.3s ease;
-        }
-
-        ::before {
-            left: -6px;
-        }
-
-        ::after {
-            right: -6px;
-        }
 
         p {
             margin: 0;
