new user message finished

--- a/Frontend/src/assets/styles/cmps/_AppHeader.scss
+++ b/Frontend/src/assets/styles/cmps/_AppHeader.scss
@@ -30,6 +30,7 @@
         align-self: center;
         display: flex;
         cursor: pointer;
+        padding-bottom: 3px;
       }
 
       h1 {
