--- a/Frontend/src/assets/styles/cmps/_UserMsg.scss
+++ b/Frontend/src/assets/styles/cmps/_UserMsg.scss
@@ -1,4 +1,4 @@
-@keyframes slideDown {
+@keyframes slideUp {
     from {
         transform: translateY(100%);
     }
@@ -11,51 +11,92 @@
 .user-msg {
     position: fixed;
     right: 0;
-    left: 0;
+    left: 10%;
     bottom: 1em;
     z-index: 999;
-    width: 100%;
-    animation: slideDown 0.5s forwards;
+    width: fit-content;
+    margin: auto;
+    animation: slideUp 0.5s forwards;
+
+    &::before {
+        content: '';
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        height: 5px;
+        transition: background-color 0.3s ease;
+        z-index: 10;
+        border-radius: 1em 1em 0 0;
+    }
+
+    &.success::before {
+        background: linear-gradient(45deg, $bgColor5, $bgColor3);
+    }
+
+    &.error::before {
+        background: linear-gradient(45deg, $bgColor6, $bgColor7);
+    }
 
     .message-area {
         position: relative;
         width: fit-content;
         max-width: 900px;
         margin: 0 auto;
-        padding: 1em 2em;
-        border-radius: 1em;
+        padding: 1em 0.5em;
         border: 1px solid rgba(0, 0, 0, 0.1);
         border-top: none;
         box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
-        opacity: 0.9;
         justify-content: center;
         align-items: center;
-
         transition: all 0.3s ease;
+        background: $clrSecondary12;
+        border-radius: 0.5em 0.5em 0 0;
+        padding-left: 8em;
 
         p {
             margin: 0;
             font-size: 30px;
             line-height: 120%;
-            color: $clrSecondary2;
+            color: $clrPrimary2;
         }
 
-        &.success {
-            background: linear-gradient(45deg, $bgColor3, $bgColor5);
+        .msg-status {
+            padding: 0.5em 0.6em;
+            border-radius: 50px;
+            gap: 0.3em;
+            transform: translateX(-120%);
+            position: absolute;
 
-            ::before,
-            ::after {
-                background-color: $bgColor3;
+            p {
+                text-transform: uppercase;
+                line-height: 120%;
+            }
+
+            &.success {
+                background: linear-gradient(90deg, $bgColor5, $bgColor3);
+
+                p {
+                    color: $clrSecondary1;
+                }
+            }
+
+            &.error {
+                background: linear-gradient(90deg, $bgColor6, $bgColor7);
+
+                p {
+                    color: $clrSecondary1;
+                }
             }
         }
 
-        &.error {
-            background: linear-gradient(45deg, $clr4, $bgColor4);
-            color: $clrSecondary8;
+        i {
+            height: 36px;
 
-            ::before,
-            ::after {
-                background-color: $clr4;
+            svg {
+                width: 100%;
+                height: 100%;
             }
         }
     }
