--- a/Frontend/src/assets/styles/setup/_variables.scss
+++ b/Frontend/src/assets/styles/setup/_variables.scss
@@ -26,6 +26,8 @@ $bgColor2: #2dd12d;
 $bgColor3: #1dbf73;
 $bgColor4: #45091b;
 $bgColor5: #19a463;
+$bgColor6: #c00d0d;
+$bgColor7: #df6e6e;
 
 $clr1: #19a463;
 $clr2: #78cdd2;
