--- a/Frontend/src/assets/styles/cmps/_AppHeader.scss
+++ b/Frontend/src/assets/styles/cmps/_AppHeader.scss
@@ -84,8 +84,7 @@
         }
       }
 
-      .login,
-      .logout {
+      .login {
         background: none;
         font-size: 16px;
         font-weight: bold;
@@ -105,7 +104,7 @@
           top: 150%;
           right: 0;
           background-color: $clrPrimary1;
-          border: 1px solid $clrSecondary1;
+          border: 1px solid $clrSecondary2;
           box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
           z-index: 10;
 
@@ -115,7 +114,7 @@
             height: 0;
             border-style: solid;
             border-width: 5px 17px 17px 17px;
-            border-color: transparent transparent $clrSecondary1 transparent;
+            border-color: transparent transparent $clrSecondary2 transparent;
             position: absolute;
             top: -22px;
             right: -1px;
@@ -128,7 +127,7 @@
             height: 0;
             border-style: solid;
             border-width: 4px 16px 16px 16px;
-            border-color: transparent transparent $clrSecondary1 transparent;
+            border-color: transparent transparent $clrPrimary1 transparent;
             position: absolute;
             top: -20px;
             right: 0;
@@ -139,6 +138,16 @@
             display: block;
             padding: 10px 15px;
             color: $clrPrimary4;
+          }
+
+          button {
+            display: block;
+            padding: 10px 15px;
+            color: $clrPrimary4;
+            background: none;
+            font-family: "macan-regular";
+            font-size: 16px;
+            font-weight: bold;
           }
         }
 
