--- a/Frontend/src/assets/styles/views/_UserProfile.scss
+++ b/Frontend/src/assets/styles/views/_UserProfile.scss
@@ -1,8 +1,10 @@
 .profile-page {
     background-color: $clrPrimary1;
     padding: 3.125em 0 2.5em;
-
+    
     .user-profile {
+        display: flex;
+        flex-direction: row;
         justify-content: space-between;
         max-width: 988px;
 
@@ -13,7 +15,8 @@
             .info-block {
                 align-items: center;
                 justify-content: space-between;
-                width: 400px;
+                width:100%;
+                min-width: 400px;
                 height: 360px;
                 padding: 30px;
                 background-color: $clrPrimary1;
@@ -81,6 +84,12 @@
                 }
                 
             }
+            @media (max-width: 900px){
+                width: 100%;
+            }
+        }
+        @media (max-width: 900px){
+            flex-direction: column;
         }
     }
 }
