--- a/Frontend/src/assets/styles/views/_UserProfile.scss
+++ b/Frontend/src/assets/styles/views/_UserProfile.scss
@@ -1,5 +1,5 @@
 .profile-page {
-    background-color: $clrPrimary1;
+    background-color: $clrSecondary12;
     padding: 3.125em 0 2.5em;
     
     .user-profile {
@@ -91,5 +91,8 @@
         @media (max-width: 900px){
             flex-direction: column;
         }
+    }
+    &.visitor{
+        background-color: $clrPrimary1;
     }
 }
