--- a/Frontend/src/assets/styles/cmps/_UserMsg.scss
+++ b/Frontend/src/assets/styles/cmps/_UserMsg.scss
@@ -71,23 +71,45 @@
 
         p {
             margin: 0;
-            font-size: 19px;
+            font-size: 16px;
             color: $clrPrimary2;
+            text-align: left;
+            width: 100%;
+        }
+
+        h3 {
+            font-size: 16px;
+            text-align: left;
+            width: 100%;
             font-family: 'macan-bold';
+            font-weight: 100;
+
+            &.success {
+                color: $bgColor5;
+            }
+
+            &.error {
+                color: $bgColor6;
+            }
         }
 
         .msg-status {
-            padding: 0.8em;
+            padding: 1.1em;
             border-radius: 50px;
             gap: 0.5em;
             position: absolute;
+            align-items: center;
+            box-shadow: 0px 5px 5px 0 rgba(0, 0, 0, 0.2);
+            margin-top: 0.25em;
 
             p {
                 text-transform: uppercase;
-                font-size: 18px;
+                font-size: 14px;
                 align-items: center;
                 display: flex;
                 font-family: 'macan-bold';
+                letter-spacing: 2px;
+                width: fit-content;
             }
 
             &.success {
@@ -108,7 +130,7 @@
         }
 
         i {
-            height: 30px;
+            height: 20px;
 
             svg {
                 width: 100%;
