little gig details layout adjusting

--- a/Frontend/src/assets/styles/views/_GigDetails.scss
+++ b/Frontend/src/assets/styles/views/_GigDetails.scss
@@ -1,6 +1,6 @@
 .gig-details {
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 60% 5% 35%;
   width: 100%;
   max-width: 1304px;
   color: $clrPrimary2;
