--- a/Frontend/src/assets/styles/setup/_mq.scss
+++ b/Frontend/src/assets/styles/setup/_mq.scss
@@ -380,11 +380,11 @@
 
 .gig-details {
     @media (max-width:600px) {
-        padding: 32px 24px 0;
+        padding: 32px 0px 24px 0px
     }
 
     @media(min-width: 601px) {
-        padding: 32px 32px 24px 32px;
+        padding: 32px 0px 24px 0px
     }
 
     .gig-details-main {
