--- a/Frontend/src/assets/styles/views/_GigDetails.scss
+++ b/Frontend/src/assets/styles/views/_GigDetails.scss
@@ -4,6 +4,7 @@
   width: 100%;
   max-width: 1304px;
   color: $clrPrimary2;
+  padding: 32px 0px 24px 0px;
 
   .gig-details-main {
     grid-column: 1/2;
