loader added, together with animation

--- a/Frontend/src/assets/styles/main.scss
+++ b/Frontend/src/assets/styles/main.scss
@@ -42,6 +42,7 @@
 @import "cmps/ImageCarousel";
 @import "cmps/ShoppingCart";
 @import "cmps/UserMsg";
+@import "cmps/Loader";
 
 @import "cmps/PaymentDetails";
 @import "cmps/PaymentInfo";
