--- a/Frontend/src/assets/styles/cmps/_PaymentDetails.scss
+++ b/Frontend/src/assets/styles/cmps/_PaymentDetails.scss
@@ -4,14 +4,50 @@
   padding: 0 16px;
   color: $clrPrimary2;
 
-  input {
-    background-color: none;
+  input[type='text'] {
+    display: flex;
+    flex-wrap: nowrap;
+    border: 1px solid #c5c6c9;
+    border-radius: .25em;
+    flex-basis: 100%;
+    align-items: center;
+    height: 2.625em;
+    margin-top: .625em;
   }
+.payment-methods {
+  // display: flex;
+  // align-items: center;
+  flex-wrap: wrap;
+  height: 64;
+  vertical-align: center;
+  padding-left: 16px;
+}
 
   .details {
     padding: 16px;
     background-color: $clrSecondary0;
     border: 1px solid $clrSecondary2;
+
+    .selected {
+      .radio-btn {
+        border-color: #222325;
+        border-width: 5px;
+      }
+    }
+    .radio-btn {
+      display: inline-block;
+      position: relative;
+      width: 20px;
+      height: 20px;
+      flex-shrink: 0;
+      align-self: flex-start;
+      margin-top: 1px;
+      border: 1px solid #dadbdd;
+      border-radius: 50%;
+      margin-right: 8px;
+      cursor: pointer;
+      user-select: none;
+    }
 
     .credit-details {
       display: flex;
@@ -25,12 +61,16 @@
     }
 
     .credit-type {
-      display: flex;
+      display: inline-flex;
       align-items: center;
       height: 25px;
 
+      &:hover .radio-btn {
+        border-color: #222325;
+      }
+
       .text {
-        margin: 0 16px;
+        margin-inline-end: 16px;
       }
 
       img {
@@ -41,11 +81,20 @@
     .credit-number {
       display: flex;
       flex-direction: column;
-      margin-inline-start: 20px;
+      margin-inline-start: 1.25em;
       width: 95.5%;
+     
 
       input {
         width: 100%;
+        display: flex;
+        flex-wrap: nowrap;
+        border: 1px solid clrSecondary45;
+        border-radius: .25em;
+        flex-basis: 100%;
+        align-items: center;
+        height: 2.625em;
+        margin-top: .625em;
       }
     }
 
@@ -71,7 +120,6 @@
       input {
         width: 100%;
       }
-
     }
 
     .buyer-info {
@@ -86,35 +134,35 @@
     }
   }
 
-  .one {
+  .section-header {
     border-block-end: 0;
     border-radius: 4px 4px 0 0;
   }
 
-  .two {
+  .credit-card {
     background-color: $clrPrimary1;
     border-block-start: 1px solid $clrSecondary2;
     border-block-end: 1px solid $clrSecondary2;
   }
 
-  .three {
+  .credit-info {
     border-block-start: 0;
     border-block-end: 0;
-    box-shadow: inset 0 2px 4px rgba(0, 0, 0, .06);
+    box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.06);
 
     input {
       margin-block-end: 16px;
     }
   }
 
-  .four {
+  .paypal {
     background-color: $clrPrimary1;
     border-radius: 0 0 4px 4px;
     border-block-start: 1px solid $clrSecondary2;
     border-block-end: 1px solid $clrSecondary2;
 
     i {
-      margin: 0 16px;
+      margin-inline-end: 16px;
     }
   }
 }
