--- a/Frontend/src/assets/styles/cmps/_PaymentInfo.scss
+++ b/Frontend/src/assets/styles/cmps/_PaymentInfo.scss
@@ -4,6 +4,41 @@
   max-width: 596.667px;
   color: $clrSecondary6;
 
+  .features {
+    list-style: none;
+    padding: 0;
+    color: $clrSecondary6;
+    font-size: rem(14px);
+    margin-block-end: rem(20px);
+
+    li {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+
+      i {
+        margin-inline-end: 16px;
+      }
+    }
+  }
+  .features {
+    list-style: none;
+    padding: 0;
+    color: $clrSecondary6;
+    font-size: rem(14px);
+    margin-block-end: rem(20px);
+
+    li {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+
+      i {
+        margin-inline-end: 16px;
+      }
+    }
+  }
+
   .payment {
     padding: 16px 16px;
     background-color: $clrPrimary1;
@@ -31,11 +66,17 @@
       }
     }
 
-    .payment-price {
+    .order-details-general {
       display: flex;
       justify-content: space-between;
       padding-block-start: 20px;
       border-block-start: 1px solid $clrSecondary2;
+      padding: 16px 0;
+      font-weight: 500;
+      background-color: transparent;
+      margin-bottom: 0;
+      text-align: left;
+      border: none;
 
       p {
         font-weight: 600;
@@ -58,7 +99,25 @@
       }
     }
 
-    .paying-fee {
+    .service-fee {
+      display: flex;
+      justify-content: space-between;
+      // margin-block-end: 16px;
+      height: 30px;
+
+      span {
+        display: flex;
+        align-items: center;
+        // gap: 10px;
+      }
+
+      img {
+        height: 16px;
+        width: 16px;
+        margin-inline-start: 8px;
+      }
+    }
+    .vat-fee {
       display: flex;
       justify-content: space-between;
       margin-block-end: 16px;
@@ -67,7 +126,7 @@
       span {
         display: flex;
         align-items: center;
-        gap: 10px;
+        // gap: 10px;
       }
 
       img {
@@ -77,10 +136,14 @@
       }
     }
 
-    .final {
+    .total-fee {
+      display: flex;
+      justify-content: space-between;
       border-top: 1px solid $clrSecondary2;
+      font-size: rem(18px);
       padding-block-start: 20px;
       font-weight: 700;
+      padding: rem(6px) 0;
     }
 
     .not {
@@ -91,16 +154,32 @@
       background-color: $clrPrimary3;
       color: $clrPrimary1;
       width: 100%;
-      height: 42px;
-      font-family: "macan-bold";
-      font-size: 16px;
+      height: 2.625em;
+      font-family: 'macan-bold';
+      font-size: 1em;
       line-height: 100%;
-      border-radius: 5px;
+      border-radius: rem(5px);
 
       &:hover {
         background-color: $clrSecondary8;
       }
     }
+  }
+
+  .delivery-time {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+    padding: 6px 0;
+  }
+
+  .secure-payment {
+    font-size: rem(14px);
+    line-height: rem(22px);
+    color: $clrSecondary6;
+    text-align: center;
+    margin-top: .5em;
   }
 
   .one {
