--- a/Frontend/src/assets/styles/cmps/_UserMsg.scss
+++ b/Frontend/src/assets/styles/cmps/_UserMsg.scss
@@ -69,6 +69,25 @@
         background: $clrSecondary12;
         border-radius: 0.5em 0.5em 0 0;
 
+        button {
+            position: absolute;
+            top: 10px;
+            right: 5px;
+            background: none;
+
+            i {
+                height: 12px;
+            }
+
+            &.success svg {
+                fill: $bgColor5;
+            }
+
+            &.error svg {
+                fill: $bgColor6;
+            }
+        }
+
         p {
             margin: 0;
             font-size: 16px;
