sticker in profile page

--- a/Frontend/src/assets/styles/setup/_variables.scss
+++ b/Frontend/src/assets/styles/setup/_variables.scss
@@ -20,6 +20,7 @@ $clrSecondary10: #e4e5e7;
 $clrSecondary11: #95979d;
 $clrSecondary12: #f7f7f7;
 $clrSecondary13: #e0e0e0;
+$clrSecondary14: #efeff0;
 
 $bgColor1: #0a4226;
 $bgColor2: #2dd12d;
