furthur design changed to profilepage

--- a/Frontend/src/assets/styles/views/_UserProfile.scss
+++ b/Frontend/src/assets/styles/views/_UserProfile.scss
@@ -43,8 +43,8 @@
 
         .profile-picture {
           position: relative;
-          height: fit-content;
-          width: fit-content;
+          height: 150px;
+          width: 150px;
           img {
             width: 150px;
             height: 150px;
