--- a/Frontend/src/assets/styles/cmps/_UserGigs.scss
+++ b/Frontend/src/assets/styles/cmps/_UserGigs.scss
@@ -12,6 +12,17 @@
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 32px;
     height: 100%;
+    
+    .user-preview{
+      height: 58px;
+      padding:0.75em;
+      .avatar-userProfile{
+        width: 1.5em;
+        height: 1.5em;
+        border-radius: 50%;
+        object-fit: cover;
+      }
+    }
 
     @media screen and (max-width: 1300px) {
       grid-template-columns: repeat(2, 1fr);
