--- a/Frontend/src/assets/styles/cmps/_UserGigs.scss
+++ b/Frontend/src/assets/styles/cmps/_UserGigs.scss
@@ -13,6 +13,45 @@
     grid-gap: 32px;
     height: 100%;
     
+    .gig-changes{
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0.75em;
+      border-block-start: 1px solid #efeff0;
+      .gig-btns{
+        display: flex;
+        align-items: center;
+        height: 100%;
+        button{
+          background-color: $clrPrimary1;
+        }
+        svg{
+          width: 16px;
+          height: 16px;
+          background-color: $clrPrimary1;
+          fill: $clrSecondary4;
+        }
+      }
+      .price{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: end;
+        height: 100%;
+        color: $clrSecondary8;
+        .starting{
+          font-size: 10px;
+          font-weight: 700;
+          color: $clrSecondary5;
+          text-transform: uppercase;
+        }
+      }
+      &.right{
+        justify-content: end;
+      }
+    }
+
     @media screen and (max-width: 1300px) {
       grid-template-columns: repeat(2, 1fr);
       grid-gap: 32px;
@@ -51,19 +90,23 @@
       }
     }
     .gig-title {
-      align-self: start;
       overflow: hidden;
       font-weight: 400;
       word-wrap: break-word;
       word-break: break-word;
-      color: $clrPrimary3;
+      color: $clrPrimary2;
       margin-inline-end: 5px;
       margin-block-end: 10px;
+      &:hover{
+        color: $bgColor3;
+        text-decoration: none;
+      }
     }
-  
+    
     .rating{
       display: flex;
       align-items: center;
+      color: $clrSecondary8;
       svg{
         margin-inline-end: 5px;
       }
