slight padding tweak

--- a/Frontend/src/assets/styles/views/_DashboardPage.scss
+++ b/Frontend/src/assets/styles/views/_DashboardPage.scss
@@ -1,9 +1,9 @@
 .dashboard-page {
     width: 100%;
-    max-width: 1400px;
     text-align: center;
     justify-content: center;
     background: $clrSecondary12;
+    padding: 1em 0 1em 0;
 
     .user-orders {
         width: 100%;
