--- a/Frontend/src/assets/styles/cmps/_GigPreview.scss
+++ b/Frontend/src/assets/styles/cmps/_GigPreview.scss
@@ -4,7 +4,7 @@
   border-radius: 0.5em;
   min-width: rem(245px);
   width: 100%;
-  height: 361px;
+  height: fit-content;
   position: relative;
 
   img {
