--- a/Frontend/src/assets/styles/cmps/_PaymentInfo.scss
+++ b/Frontend/src/assets/styles/cmps/_PaymentInfo.scss
@@ -40,9 +40,9 @@
   }
 
   .payment {
-    padding: 16px 16px;
+    // padding: 16px 16px;
     background-color: $clrPrimary1;
-    border: 1px solid $clrSecondary2;
+    // border: 1px solid $clrSecondary2;
     margin: 0 auto;
     width: 377px;
 
@@ -139,7 +139,7 @@
     .total-fee {
       display: flex;
       justify-content: space-between;
-      border-top: 1px solid $clrSecondary2;
+      // border-top: 1px solid $clrSecondary2;
       font-size: rem(18px);
       padding-block-start: 20px;
       font-weight: 700;
