--- a/Frontend/src/assets/styles/cmps/_ServicesCarousel.scss
+++ b/Frontend/src/assets/styles/cmps/_ServicesCarousel.scss
@@ -5,7 +5,6 @@
     max-width: 1400px;
     margin: auto;
     margin-bottom: 4.5em;
-    overflow: hidden;
 
     h2 {
       font-size: 32px;
@@ -15,49 +14,47 @@
       margin-bottom: 20px;
       margin-left: 8px;
     }
+    .services-carousel-wrapper {
+      overflow: hidden;
+      .services {
+        display: flex;
+        flex-direction: row;
+        transition: transform 1.2s ease-in-out;
 
-    .services {
-      display: flex;
-      transition: transform 1.2s ease-in-out;
-
-      .service {
-        // position: relative;
-        // border-radius: 4px !important;
-        padding: 0em;
-        height: 345px;
-        cursor: pointer;
-        flex: 0 0 auto;
-        // overflow: hidden;
-
-        img {
-          // width: 100%;
-          // height: 100%;
+        .service {
+          border-radius: 0.25em;
+          padding: 0em;
+          height: 345px;
+          cursor: pointer;
+          flex: 0 0 auto;
           padding: 0 18px;
-          // transition: transform 1.2s ease-in-out;
-        }
 
-        .service-text {
-          position: relative;
-          bottom: 100%;
-          left: 26px;
-          color: $clrPrimary1;
-          font-size: 24px;
-          padding: 0px 10px;
-          line-height: 30px;
-          font-size: 24px;
-          line-height: 130%;
-
-          span {
-            font-size: 14px;
+          img {
+            border-radius: 0.25em;
           }
-        }
-        & img:hover {
-          opacity: 0.85;
-          transition: opacity .3s ease-in-out;
+
+          .service-text {
+            position: relative;
+            bottom: 100%;
+            left: 26px;
+            color: $clrPrimary1;
+            font-size: 24px;
+            padding: 0px 10px;
+            line-height: 30px;
+            font-size: 24px;
+            line-height: 130%;
+
+            span {
+              font-size: 14px;
+            }
+          }
+          & img:hover {
+            opacity: 0.85;
+            transition: opacity 0.3s ease-in-out;
+          }
         }
       }
     }
-
     .carousel-btn {
       position: absolute;
       top: 50%;
