further use of svgIcons in header

--- a/Frontend/src/assets/styles/cmps/_AppHeader.scss
+++ b/Frontend/src/assets/styles/cmps/_AppHeader.scss
@@ -41,9 +41,8 @@
         span {
           margin-bottom: 8px;
 
-          img {
-            width: 18px;
-            height: 18px;
+          i {
+            padding: 0;
             align-self: flex-end;
           }
         }
