--- a/Frontend/src/assets/styles/main.scss
+++ b/Frontend/src/assets/styles/main.scss
@@ -43,8 +43,8 @@
 @import "cmps/UserMsg";
 @import "cmps/Loader";
 
-@import "cmps/PaymentDetails";
-@import "cmps/PaymentInfo";
+@import "cmps/PurchaseMain";
+@import "cmps/PurchaseAside";
 
 // Views
 @import "views/HomePage";
