--- a/Frontend/src/assets/styles/views/_GigPurchase.scss
+++ b/Frontend/src/assets/styles/views/_GigPurchase.scss
@@ -1,7 +1,19 @@
 .gig-purchase {
-    display: flex;
-    width: 100%;
-    margin-top: 2em;
-    margin-bottom: 2em;
-    max-width: 1432px;
+  display: flex;
+  width: 100%;
+  margin-top: 2em;
+  margin-bottom: 2em;
+  max-width: 1432px;
+}
+
+.max-width-container {
+//   margin: 0;
+  padding: 24px 24px 48px;
+  width: 100%;
+  box-sizing: border-box;
+  
+  @media only screen and (min-width: 600px)  {
+    //   margin: 0;
+      padding: 32px 0 64px;
+  }
 }
