--- a/Frontend/src/assets/styles/cmps/_UserGigs.scss
+++ b/Frontend/src/assets/styles/cmps/_UserGigs.scss
@@ -17,7 +17,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      padding: 0.75em;
+      padding: 0.625em 0.75em;
       border-block-start: 1px solid #efeff0;
       .gig-btns{
         display: flex;
@@ -36,8 +36,9 @@
       .price{
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: end;
         justify-content: end;
+        font-size: 18px;
         height: 100%;
         color: $clrSecondary8;
         .starting{
